Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 12.0.0
-
None
-
368ad6365 (master)
Description
When creating a kit for remote linux devices, and for kits registered directly by the installer e.g. for Boot2Qt, the target selector (ctrl+t / mode bar) does not allow switching the kit's device. One has to open the kit preferences and switch the device there.
That is much more convenient for iOS and Android, where the device switcher is available in the target selector.
The code: The kit has a list of "mutable" aspects (defaults to empty), which are the aspects shown in the target selector. The iOS and Android plugins create kits themselves from respective Qt versions explicitly set the run device to be mutable in the created kits, which makes the device switcher available in the target selector.
I think it would make sense to automatically make the run device "mutable" for any kit that has a non-desktop run device type set.
Attachments
For Gerrit Dashboard: QTCREATORBUG-30031 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
524991,3 | ProjectExplorer: Make DeviceKitAspect mutable for all non-Desktop kits | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |