ProjectExplorer: Make DeviceKitAspect mutable for all non-Desktop kits

Fixes: QTCREATORBUG-30031
Change-Id: I0b2dacb5977b0f8e81afd13a0a4af6354ea81915
Reviewed-by: Eike Ziller <eike.ziller@qt.io>